fix: change bag in header- add property "z-index" for header

--- a/shelter/css/style.css
+++ b/shelter/css/style.css
@@ -465,6 +465,7 @@ template {
   width: 100%;
   padding: 60px 0 0 0;
   background: url("/assets/images/noise_trans.png"), radial-gradient(100% 213.42% at 0% 80%, #5B483A 0%, #262425 100%);
+  z-index: 100;
 }
 .header .container {
   display: flex;
